# learn_ltl

./: .gitignore  Cargo.toml  LICENSE  README.md  sample.ron  sample197.ron  sample_simulator_demo.ron  sample_simulator_r1.ron  sample_tbth01.ron
R1experiments/R1logs/: fail-pre-kit.txt  succbase.txt
R1experiments/logsRAL/: fail-after-grasp.txt  failNavKit.txt  failbatt.txt  failbatt2.txt  succ_bat<75.txt
RALexperiments/: sample.json
RALexperiments/logsRAL/: fail-battery-steps.txt  suc_base.txt  succ.battlow.txt  succ_batt<50.txt
SATcomparison/abscence/: 0003.ron  0006.ron  0007.ron  0010.ron  0011.ron  0013.ron  0024.ron  0026.ron  0029.ron  0037.ron  0038.ron  0039.ron  0040.ron  0042.ron  0043.ron  0047.ron  0048.ron  0051.ron  0052.ron  0058.ron  0060.ron  0062.ron
SATcomparison/universality/: 0003.ron  0004.ron  0012.ron  0016.ron  0018.ron  0021.ron  0024.ron  0025.ron  0026.ron  0027.ron  0028.ron  0029.ron  0031.ron  0034.ron  0036.ron  0037.ron  0038.ron  0040.ron  0042.ron  0045.ron  0047.ron  0048.ron  0053.ron  0055.ron  0056.ron  0058.ron  0061.ron
SySLite-comparison/: bank_transaction_1250.ron  chinese_wall_policy_1250.ron  dynamic_separation_of_duty_1250.ron  financial_institute_1250.ron  glba_6802_1250.ron  hippa_16450a2_1250.ron  hippa_16450a3_1250.ron
abscence/: 0000.ron  0008.ron  0009.ron  0012.ron  0015.ron  0016.ron  0017.ron  0018.ron  0019.ron  0021.ron  0022.ron  0023.ron  0025.ron  0027.ron  0028.ron  0030.ron  0031.ron  0032.ron  0033.ron  0034.ron  0035.ron  0036.ron  0041.ron  0045.ron  0046.ron  0049.ron  0053.ron  0054.ron  0055.ron  0056.ron  0057.ron  0059.ron  0061.ron
benches/: sample.rs
simulator/: Cargo.toml
simulator/src/: ai.rs  main.rs  scenario.rs  task.rs  world.rs
src/: de_sample.rs  learn.rs  lib.rs  main.rs  syntax.rs  too_big_to_handle.rs  trace.rs
src/sampler/: main.rs
src/simulator/: ai.rs  main.rs  monitor.rs  task.rs  world.rs
universality/: 0000.ron  0006.ron  0009.ron  0010.ron  0013.ron  0015.ron  0019.ron  0020.ron  0022.ron  0023.ron  0030.ron  0032.ron  0033.ron  0035.ron  0039.ron  0041.ron  0043.ron  0046.ron  0049.ron  0050.ron  0051.ron  0052.ron  0054.ron  0057.ron  0059.ron  0060.ron  0062.ron
(+1 files in other folders)
