[package]
name = "learn_pltl_fast"
version = "0.1.0"
edition = "2021"

[lib]
name = "learn_pltl_fast"
path = "src/lib.rs"

[[bin]]
name = "solver"
path = "src/solver/main.rs"

[[bin]]
name = "sampler"
path = "src/sampler/main.rs"

[[bin]]
name = "simulator"
path = "src/simulator/main.rs"

[[bench]]
name = "sample"
harness = false

# [profile.release]
# lto = true
# debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.3", features = ["derive"] }
itertools = "0.10.*"
petgraph = "0.6.*"
rand = "0.8"
rayon = "1.5.*"
ron = "0.7.*"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "2.0"

[dev-dependencies]
criterion = "0.3"
